[package]
name = "spritedit"
version = "0.1.0"
edition = "2021"
description = "A sprite editor built with Rust + WebAssembly + WebGPU"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
rfd = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "File",
    "FileList",
    "Url",
    "Event",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 2

[profile.release.package."*"]
opt-level = 2
